--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Family Countdown</a>
+        <a class="navbar-brand" href="#">Bears Countdown</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -67,10 +67,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1 class="mt-5">How long to go</h1>
-            <p class="lead"><span id="days">XXX</span> Days <span id="hours">XXX</span> Hours</p>
+          <h1 class="mt-5">The bears American adventure</h1>
+            <p class="lead"><span id="days">Working out the</span> Days <span id="hours">and the</span> Hours</p>
          <div class="progress">
-            <div id="dynamic" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+            <div id="dynamic" class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">Test</div>
+             <div id="dynamic2" class="progress-bar bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 50%">Brushing bear fur...</div>
          </div>
         </div>
       </div>
@@ -87,7 +88,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 
 </html>
