--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1 class="mt-5">The bears American adventure</h1>
-            <p class="lead"><span id="days">Working out the</span> Days <span id="hours">and the</span> Hours</p>
+            <p class="lead"><span id="days">Working out the</span> Days <span id="hours"> the</span> Hours <span id="minutes"> the</span> Minutes <span id="seconds">and the</span> Seconds</p>
          <div class="progress">
             <div id="dynamic" class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">Test</div>
              <div id="dynamic2" class="progress-bar bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 50%">Brushing bear fur...</div>
