--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 		
 		.tag.up{
 			top:-40px;
+			padding-left:5px;
 		}
 		
 		.line.up{
@@ -141,10 +142,10 @@
 			</p>
 			<div class=" mt-5 progress position-relative">
 			<div class="line down start"></div>
-			<div class="tag down start">19th April (The day we booked) </div>
+			<div class="tag down start">19th April<br> (The day we booked) </div>
 			
-			<div class="line down kitten"></div>
-				<div class="tag down kitten">Kitten<br> Arrives</div>
+			<div class="line up kitten"></div>
+				<div class="tag up kitten">Kitten<br> Arrives</div>
 				
 			<div class="line down jill"></div>
 			<div class="tag down jill">Mum to <br>Jill and Roberts</div>
