added second countdown

--- a/index.html
+++ b/index.html
@@ -187,7 +187,18 @@
         </div>
 	</div>
 </div>
-
+<div class="col-lg-12 text-center">
+ <p class="lead pt-5 mt-5">
+	 <h2>Next Event</h2>
+			   <span id="event_days">Working out the</span> 
+			   Days 
+			   <span id="event_hours">the</span>
+			   Hours <span id="event_minutes">the</span>
+			   Minutes 
+			   <span id="event_seconds">and the</span>
+			   Seconds until the north bears have a warm kitten
+			</p>	  
+	  </div>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
