--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				<div class="tag up kitten">Kitten Arrives</div>
                 
                 <div class="line downmore eye"></div>
-				<div class="tag downmore eye">Kitten Arrives</div>
+				<div class="tag downmore eye">Joes Laser Eye</div>
 				
 			<div class="line down jill"></div>
 			<div class="tag down jill">Mum to <br>Jill and Roberts</div>
