--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="/calc">Tools</a>
             </li>
           </ul>
         </div>
