--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 			   Hours <span id="event_minutes">the</span>
 			   Minutes 
 			   <span id="event_seconds">and the</span>
-			   Seconds until the north bears have a warm kitten
+			   Seconds until Joe's eyes are forever improved
 			</p>	  
 	  </div>
     <!-- Bootstrap core JavaScript -->
