--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="apple-mobile-web-app-capable" content="yes">
        <link rel="manifest" href="manifest.json" />
+      <link rel="apple-touch-startup-image" href="/launch.png">
     <meta name="description" content="">
     <meta name="author" content="">
 
