--- a/index.html
+++ b/index.html
@@ -129,26 +129,7 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Bears Countdown</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/calc">Tools</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    
 
     <!-- Page Content -->
     <div class="container">
@@ -212,7 +193,7 @@
 	</div>
 </div>
 <div class="col-lg-12 text-center">
- <p class="lead pt-5 mt-5">
+ <p class="lead pt-5 mt-5"></p>
 	 <h2>Next Event</h2>
 			   <span id="event_days">Working out the</span> 
 			   Days 
@@ -221,7 +202,7 @@
 			   Minutes 
 			   <span id="event_seconds">and the</span>
 			   Seconds until Joe's eyes are forever improved
-			</p>	  
+				  
 	  </div>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
