--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				<div class="tag downmore eye">Joes Laser Eye</div>
 				
 			<div class="line down jill"></div>
-			<div class="tag down jill">Mum to <br>Jill and Roberts</div>
+			<div class="tag down jill">Mum coffee <br>Jill & Robert</div>
 				
 			<div class="line downmore halloween"></div>
 			<div class="tag downmore halloween">Halloween</div>
