--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       body {
         padding-top: 54px;
         background: #41295a;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to top, #262042, #341e80);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to top, #2b1e56, #341e80); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background-image: url(img/bg1.png);
+          background-blend-mode: multiply;
           height: 100%;
           color: aliceblue
       }
@@ -156,7 +156,7 @@
 				<div class="tag downmore eye">Joes Laser Eye</div>
 				
 			<div class="line down jill"></div>
-			<div class="tag down jill">Mum coffee <br>Jill & Robert</div>
+			<div class="tag down jill">Mum coffee <br>Jill and Robert</div>
 				
 			<div class="line downmore halloween"></div>
 			<div class="tag downmore halloween">Halloween</div>
