--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         background-image: url(img/bg1.png);
           background-blend-mode: multiply;
           height: 100%;
-          color: aliceblue
+          color: aliceblue;
+          overflow: hidden;
       }
       @media (min-width: 992px) {
         body {
@@ -135,8 +136,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1 class="mt-5">The bears American adventure</h1>
-           <p class="lead">
+          <h1 class="mt-2 mb-5">The bears American adventure</h1>
+           <p class="lead pb-3">
 			   <span id="days">Working out the</span> 
 			   Days 
 			   <span id="hours">the</span>
