--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<div class="vtag vright vhalloween">Halloween</div>
       
       <div class="vline vleft vbonfire"></div>
-			<div class="tag vleft vbonfire">Bonfire Night</div>
+			<div class="vtag vleft vbonfire">Bonfire Night</div>
       
       <div class="vline vright vchols"></div>
 			<div class="vtag vright vchols">Christmas Holidays</div>
