--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="mt-2 mb-3">The bears American adventure</h2>
+          <h2 class="mt-2 mb-3">The Bears American Adventure</h2>
            <p class="lead pb-3">
 			   <span id="days">Working out the</span> 
 			   Days 
@@ -42,7 +42,7 @@
             
             <div class="col-lg-12 text-center">
  
-	 <h2>Next Event</h2>
+	 <h2>Next Milestone</h2>
                 <p class="pb-3">
 			   <span id="event_days">Working out the</span> 
 			   Days 
