--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			   Hours <span id="event_minutes">the</span>
 			   Minutes 
 			   <span id="event_seconds">and the</span>
-			   Seconds until Joe's eyes are forever improved
+			   Seconds until a spooky scary halloween
                 </p>
 	  </div>
             
