--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			   Hours <span id="event_minutes">the</span>
 			   Minutes 
 			   <span id="event_seconds">and the</span>
-			   a spooky Halloween and half way!
+			   Joseph Arrives for Christmas
                 </p>
 	  </div>
             
