--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-startup-image" href="/launch.png">
     <meta name="description" content="">
     <meta name="author" content="">
-
+	  <meta name="theme-color" content="#7207ff">
     <title>Family Countdown</title>
 
     <!-- Bootstrap core CSS -->
