--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			   Hours <span id="event_minutes">the</span>
 			   Minutes 
 			   <span id="event_seconds">and the</span>
-			   Until Adam enters the working world
+			   Until Kates Birthday
                 </p>
 	  </div>
             
