--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
 			<div class="vtag vright adamjob">Adam Starts Job</div>
 	  
       <div class="vline vleft vkatebday"></div>
-			<div class="vtag vleft vkatebday">Kate Birthday</div>
+      <div class="vtag vleft vkatebday">Kate Birthday</div>
+      
+      <div class="vline vright vamydown"></div>
+      <div class="vtag vright vamydown">Amy Down</div>
+
+      <div class="vline vleft veaster"></div>
+      <div class="vtag vleft veaster">Easter</div>
 				
 			<div class="vline vright vamybday"></div>
 			<div class="vtag vright vamybday">Amy Birthday</div>
