--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			   Hours <span id="event_minutes">the</span>
 			   Minutes
 			   <span id="event_seconds">and the</span>
-			   Until Amy lands in England
+			   Until the bunnies emerge for Easter
                 </p>
 	  </div>
 
