Probably the final push, last date

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			   Hours <span id="minutes">the</span>
 			   Minutes
 			   <span id="seconds">and the</span>
-			   Seconds
+			   Seconds until takeoff!
 			</p>
 
             <div class="col-lg-12 text-center">
@@ -50,7 +50,7 @@
 			   Hours <span id="event_minutes">the</span>
 			   Minutes
 			   <span id="event_seconds">and the</span>
-			   Until the bunnies emerge for Easter
+			   until we meet in London
                 </p>
 	  </div>
 
